# nonprofit_networks

./: LICENSE  README.md  pyproject.toml
docs/: Example-Grassroots.ipynb  Example-Network.ipynb
nonprofit_networks/: __init__.py  network_builder.py  propublica_sdk.py  response_types.py  utils.py
tests/: test_propublica_sdk.py
