[project]
name = "nonprofit_networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "xmltodict>=0.14.2",
]

[tool.uv]
dev-dependencies = ["ipykernel>=6.29.5", "ruff>=0.9.4"]
